--- a/static/style.css
+++ b/static/style.css
@@ -2,39 +2,24 @@ html, body{
     height: 100%;
     max-height: 100%;
     font-family: 'Roboto', sans-serif;
+    background-color: #edeef0;
 }
 
-.top-container{
-    padding-top: 10%;
+.section-top{
+    margin: 20px;
 }
 
-.general-container{
-    background: url('img/bg_image.jpg');
-    height: 100%;
+.product-item{
+    height: 230px;
+    background-color: white;
+    border: 1px solid lightgrey;
+    position: relative;
+    padding: 5px;
+    text-align: center;
 }
 
-.general-container form{
-    margin-top: 30px;
-}
-
-.general-container form label{
-    font-weight: 100;
-    color: white;
-}
-
-.btn-orange{
-	background-color: #e8643e;
-	border: none;
-}
-
-.btn-orange:hover{
-	background-color: #9c4126;
-	border: none;
-}
-
-.title{
-	color: white;
-	text-align: center;
-	font-weight: 100;
-    line-height: 50px;
+.add-to-cart-btn{
+    position: absolute;
+    bottom: 15px;
+    left: 50px;
 }
