--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -3,60 +3,59 @@
 
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                {% for image_item in product.productimage_set.all%}
-                    <div class="product-image-item">
-                        <img src="{{ image_item.image.url }}" class="img-responsive"> <!--img have same size as div with class'img-responsive'-->
-                    </div>
-                {% endfor %}
+<div class="container">
+    <div class="row">
+        <div class="col-lg-6">
+            {% for image_item in product.productimage_set.all%}
+            <div class="product-image-item">
+                <img src="{{ image_item.image.url }}" class="img-responsive"> <!--img have same size as div with class'img-responsive'-->
             </div>
-            <div class="col-lg-6">
-                <h1 class="text-center">
-                    {{ product.name }}
-                </h1>
-                <div class="">
-                    <p>
-                        Price {{ product.price }}
-                    </p>
+            {% endfor %}
+        </div>
+        <div class="col-lg-6">
+            <h1 class="text-center">
+                {{ product.name }}
+            </h1>
+            <div class="">
+                <p>
+                    Price {{ product.price }}
+                </p>
+            </div>
+            <div>
+              <!-- Nav tabs -->
+              <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active">
+                    <a href="#description" aria-controls="home" role="tab" data-toggle="tab">
+                        Описание
+                    </a>
+                </li>
+                <li role="presentation">
+                    <a href="#delivery" aria-controls="profile" role="tab" data-toggle="tab">
+                        Доставка
+                    </a>
+                </li>
+              </ul>
+
+              <!-- Tab panes -->
+              <div class="tab-content product-description-tabs">
+                <div role="tabpanel" class="tab-pane active" id="description">
+                    {{ product.description }}
                 </div>
-                <div>
-                    <div>
-
-  <!-- Nav tabs -->
-  <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active">
-        <a href="#description" aria-controls="home" role="tab" data-toggle="tab">
-            Описание
-        </a>
-    </li>
-    <li role="presentation">
-        <a href="#delivery" aria-controls="profile" role="tab" data-toggle="tab">
-            Доставка
-        </a>
-    </li>
-    <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
-    <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
-  </ul>
-
-  <!-- Tab panes -->
-  <div class="tab-content product-description-tabs">
-    <div role="tabpanel" class="tab-pane active" id="description">
-        {{ product.description }}
-    </div>
-    <div role="tabpanel" class="tab-pane" id="delivery">
-        <h3>Как осуществляется доставка</h3>
-    </div>
-    <div role="tabpanel" class="tab-pane" id="messages">...</div>
-    <div role="tabpanel" class="tab-pane" id="settings">...</div>
-  </div>
-
-</div>
-   
-
-                 </div>
+                <div role="tabpanel" class="tab-pane" id="delivery">
+                    <h3>Как осуществляется доставка</h3>
+                </div>
+              </div>
             </div>
+            <div>
+                <form id="form_buying_product" class="form-inline" style="display: inline;">
+                    <input type="number" class="form-control" name="number" id="number">
+                </form>
+                <button type="submit" class="btn btn-success btn-buy">
+                    Купить
+                </button>
+            </div>
+
         </div>
     </div>
+</div>
 {% endblock %}
