--- a/static/static_dev/css/style.css
+++ b/static/static_dev/css/style.css
@@ -72,6 +72,31 @@ html, body{
     margin-bottom: 5px;
 }
 
-.form-inline{
-    display: inline-block;
+.navbar-top{
+    min-height: 10px;
+    height: 20px;
+    background-color: green;
+    border: none;
+    border-radius: 0; 
+}
+
+.navbar-main{
+    background-color: #56cc57;
+    border: none;
+    border-radius: 0;
+}
+
+.basket-container{
+    position: relative;
+    width: 400px;
+    padding: 15px 10px;
+}
+
+.basket-items{
+    position: absolute;
+    top: 50px;
+    width: 100%;
+    background-color: #55e093;
+    z-index: 10;
+    padding: 10px;
 }
