--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -47,14 +47,21 @@
               </div>
             </div>
             <div>
-                <form id="form_buying_product" class="form-inline" style="display: inline;">
-                    <input type="number" class="form-control" name="number" id="number">
-                </form>
-                <button type="submit" class="btn btn-success btn-buy">
-                    Купить
-                </button>
-            </div>
-
+                <form id="form_buying_product" class="form-inline">
+                    <div class="form-group">
+                        <input type="number" class="form-control" name="number" id="number">
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" id="submit_btn" class="btn btn-success btn-buy"
+                            data-product_id = "{{ product.id }}"
+                            data-name = "{{ product.name }}"
+                            data-price = "{{ product.price }}"
+                        >
+                            Купить
+                        </button>
+                    </div>
+            </form>
+          </div>
         </div>
     </div>
 </div>
