--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -34,7 +34,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li>
               <div class="basket-container">
-                <a href="">Корзина</a>
+                <a href="">Корзина<span id="basket_total_nmb"></a>
                 <div class="basket-items hidden">
                   <ul class="">
                     <li>bask</li>
